# XDEV

./: .codacy.yml  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  requirements.txt
cmake/: README.md  boost.cmake  cov_config.cmake  demo_doc.cmake  docs.cmake  doxygen.cmake  googletest.cmake  kernel_doc.cmake  logger.cmake  package_add.cmake  test_doc.cmake  xrt.cmake
darkside/: README.md
darkside/farm/alveo_kdma_p2p_verify/: README.md
darkside/farm/alveo_u200_nifd_experimental/: README.md
darkside/farm/rules/: add_one.mk  copy.mk  hello.mk  hello_triple_compute_unit.mk  vadd.mk  xocc.mk
darkside/kernel/: DoxygenConfig.txt  README.md
darkside/kernel/copy/: copy_kernel.cl
darkside/kernel/hello/: README.md  hello_kernel.cl
darkside/kernel/vadd/: README.md  vadd_kernel.cl
docs/: index.html
docs/demo/: mkdocs.yml
docs/demo/site/: 404.html  CMakeLists.txt  DoxygenConfig.txt  DoxygenMain.txt  index.html  sitemap.xml
docs/developer/html/: annotated.html  classes.html  classxclAXICheckerCodes-members.html  classxclAXICheckerCodes.html  config_8hpp.html  config_8hpp__dep__incl.map  config_8hpp__dep__incl.md5  config_8hpp_source.html  copy__kernel_8cl.html  copy__kernel_8cl_source.html  debug__ip__layout_8hpp.html  debug__ip__layout_8hpp__dep__incl.map  debug__ip__layout_8hpp__dep__incl.md5  debug__ip__layout_8hpp__incl.map  debug__ip__layout_8hpp__incl.md5  debug__ip__layout_8hpp_source.html  debug__profile__device__info_2test_8cpp.html  debug__profile__device__info_2test_8cpp__incl.map  debug__profile__device__info_2test_8cpp__incl.md5  debug__profile__device__info_2test_8cpp_source.html  debug__profile__device__info__demo_8cpp.html  debug__profile__device__info__demo_8cpp__incl.map  debug__profile__device__info__demo_8cpp__incl.md5  debug__profile__device__info__demo_8cpp_source.html  dir_000012_000020.html  dir_000013_000020.html  dir_000015_000013.html  (+236 more)
docs/html/: annotated.html  classCounter-members.html  classCounter.html  classMyString-members.html  classMyString.html  classOnTheFlyPrimeTable-members.html  classOnTheFlyPrimeTable.html  classOnTheFlyPrimeTable__coll__graph.map  classOnTheFlyPrimeTable__inherit__graph.md5  classPreCalculatedPrimeTable-members.html  classPreCalculatedPrimeTable.html  classPreCalculatedPrimeTable__coll__graph.md5  classPreCalculatedPrimeTable__inherit__graph.map  classPrimeTable-members.html  classPrimeTable.html  classPrimeTable__inherit__graph.map  classPrimeTable__inherit__graph.md5  classQueue-members.html  classQueue.html  classQueueNode-members.html  classQueueNode.html  classes.html  classxclAXICheckerCodes.html  config_8hpp.html  config_8hpp__dep__incl.map  config_8hpp__dep__incl.md5  config_8hpp_source.html  copy__kernel_8cl.html  debug__profile__device__info_2main_8cpp.html  debug__profile__device__info_2main_8cpp__incl.map  debug__profile__device__info_2main_8cpp__incl.md5  debug__profile__device__info_2test_8cpp.html  debug__profile__device__info_2test_8cpp__incl.map  debug__profile__device__info_2test_8cpp__incl.md5  debug__profile__device__info__demo_8cpp.html  dir_000003_000002.html  dir_000007_000006.html  dir_000008_000002.html  dir_000008_000007.html  dir_000009_000002.html  (+231 more)
docs/kernel/: mkdocs.yml
docs/test/: mkdocs.yml
misc/: README.md
scripts/: launch_specialized_gdb_with_appdebug.sh
tools/jump_host_automation/: command.py  config.example.json  db.sqlite3  helper.py  jump_host.py  login.py  parse.py  power_cycle.py  prompt.py  remote_start.py  requirements.txt  show.py  stop.py  terminal.py  user_input.py
tools/repository_automation/: README.md  composer.py  config.py  ftype.py  gitbot.py  linter.py  magic.py  parse.py
tools/xclbin_repository_utils/: README.md
xdev/: CMakeLists.txt  README.md
xdev/danger/: README.md
xdev/dev/: CMakeLists.txt  README.md
xdev/test/: CMakeLists.txt  README.md
(+279 files in other folders)
